<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_carrito"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/menu_carrito" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favoritos" />
        <item
            android:id="@+id/nav_webSite"
            android:icon="@drawable/ic_website"
            android:title="@string/menu_webSite" />
    </group>
</menu>