<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegistroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-25dp"
            app:layout_goneMarginTop="0dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/registro_LogoImagen"
                android:layout_width="match_parent"
                android:layout_height="222dp"
                android:src="@drawable/logo2_app"/>

            <TextView
                android:id="@+id/registro_TituloActividad"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="-15dp"
                android:gravity="center"
                android:text="@string/Registrate"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/registro_Nombre"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="24dp"
                    android:gravity="start"
                    android:hint="@string/registro_Nombre"
                    android:inputType="text"
                    android:layout_marginTop="5dp"/>
                <EditText
                    android:id="@+id/registro_Apellidos"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="start"
                    android:hint="@string/registro_Apellido"
                    android:inputType="text"
                    android:layout_marginTop="5dp"/>

            </LinearLayout>


            <EditText
                android:id="@+id/registro_Email"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:gravity="start"
                android:hint="@string/registro_Direccion_Email"
                android:inputType="textEmailAddress"
                android:layout_marginTop="5dp"/>

            <EditText
                android:id="@+id/registro_contrasena"
                android:layout_width="320dp"
                android:layout_height="40dp"
                android:layout_marginStart="24dp"
                android:gravity="start"
                android:hint="@string/registro_Contraseña"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/registro_CrearCuenta"
                android:layout_width="307dp"
                android:layout_height="50dp"
                android:textAllCaps="false"
                android:background="@drawable/borde_boton_facebook"
                android:layout_gravity="center"
                android:text="@string/Boton_CrearCuenta"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="300dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:src="@drawable/linea_login"/>

            <LinearLayout
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/login_BotonFacebook"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:padding="16dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="38dp"
                    android:background="@drawable/borde_boton_facebook"
                    android:foreground="@drawable/boton_facebook" />

                <Button
                    android:id="@+id/login_BotonGoogle"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="24dp"
                    android:background="@drawable/borde_boton_facebook"
                    android:foreground="@drawable/boton_google" />

            </LinearLayout>

            <Button
                android:id="@+id/registro_InicioSesion"
                android:layout_width="307dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/borde_boton_crearcuenta"
                android:text="@string/registro_TienesCuenta"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/registro_Condiciones"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/Boton_Condiciones"
                android:textColor="#000000"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/registro_Condiciones2"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/Boton_Condiciones2"
                android:textColor="#0575aa"
                android:textSize="14sp"/>

        </LinearLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>