<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-25dp"
        app:layout_goneMarginTop="0dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_LogoImagen"
            android:layout_width="match_parent"
            android:layout_height="222dp"
            android:src="@drawable/logo2_app"/>

        <TextView
            android:id="@+id/login_TituloActividad"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="85dp"
            android:gravity="center"
            android:text="@string/Saludo_Seleccion_Opcion"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/boton_ir_home"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:background="@drawable/borde_boton_facebook"
            android:layout_gravity="center"
            android:text="@string/Ir_Home"
            android:layout_marginTop="35dp"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:layout_width="300dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/linea_login"/>

        <Button
            android:id="@+id/boton_ir_hist_compras"
            android:layout_width="307dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:background="@drawable/borde_boton_crearcuenta"
            android:layout_gravity="center"
            android:text="@string/Ir_Compras"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>