<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F8F8F8"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/productos_AppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GRUPOESS.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.GRUPOESS.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="55dp"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/car_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/carrito_productos_carrito"
            android:textColor="@color/dark_blue"
            android:gravity="center"
            android:layout_marginTop="3dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fr_Car_Productos"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/carrito_envio"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carrito_enviar_a"
                        android:textColor="@color/divider_gray"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/car_dirPedido"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Destino"
                        android:textAlignment="center"
                        android:textColor="@color/purple_700"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carrito_entrega"
                        android:textColor="@color/divider_gray"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <Spinner
                        android:id="@+id/carrito_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:spinnerMode="dialog"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/carrito_detalles_pedido"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carrito_total_del_producto"
                        android:textColor="@color/divider_gray"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/car_TProductos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="$"
                        android:textColor="@color/purple_700"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/carrito_valor_impuestos"
                        android:textColor="@color/divider_gray"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/car_costoEnvio"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="$"
                        android:textColor="@color/purple_700"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/selec_producto_valor_total"
                        android:textColor="@color/divider_gray"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/car_TotalPagar"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="$"
                        android:textColor="@color/purple_700"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textStyle="bold"/>
                </LinearLayout>

                <Button
                    android:id="@+id/car_btnPagar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:text="@string/carrito_boton_comprar"
                    android:textSize="24sp"
                    android:shadowColor="@color/black"
                    android:background="@drawable/entrada"/>

            </LinearLayout>



    </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_cell_phone"
        tools:ignore="MissingConstraints"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>